--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
+    "mqtt": "^5.10.3",
     "mysql2": "^3.12.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
