--- a/server/package.json
+++ b/server/package.json
@@ -2,52 +2,43 @@
   "name": "plantflow",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "run-db": "node --loader ts-node/esm database.ts"
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
-    "chart.js": "^4.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "mongodb": "^6.12.0",
-    "mqtt": "^5.10.3",
-    "mysql2": "^3.12.0",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1",
-    "remixicon": "^4.6.0",
-    "ts-node-dev": "^2.0.0"
+    "mongoose": "^8.9.2",
+    "mqtt": "^5.10.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/express": "^5.0.0",
+    "@types/mqtt": "^0.0.34",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/node": "^4.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "typescript-eslint": "^8.18.2"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
