--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "mqtt": "^5.10.3",
     "mysql2": "^3.12.0",
