--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,14 @@
   "name": "plantflow",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "start": "node api/server.js",
     "dev": "nodemon api/server.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
