--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^11.15.0",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
