--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "fs": "^0.0.1-security",
     "mongodb": "^6.12.0",
     "mqtt": "^5.10.3",
@@ -26,7 +27,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "remixicon": "^4.6.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
