--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "mqtt": "^5.10.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
